# Controller/SensorController.go
@@ -1,0 +1,36 @@
+package Controller
+
+import (
+	"Api/Abstractions/Services"
+	"Api/Data/Request"
+	"github.com/gin-gonic/gin"
+	"log"
+)
+
+type SesorController struct {
+	ISesorService Services.ISesorService
+}
+
+// Register godoc
+// @Summary Atualiza um sensor
+// @Tags Sensor
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param data body Request.UpdateSensorRequest true "Dados do sensor"
+// @Success 201 {object} bool
+// @Failure 400 {object} bool
+// @Failure 500 {object} bool
+// @Router /api/v1/sesor/update [post]
+func (controller *SesorController) Update(c *gin.Context) {
+	var request Request.UpdateSensorRequest
+
+	err := c.ShouldBindJSON(&request)
+	if err != nil {
+		log.Fatalf("Error binding JSON: %v", err)
+		return
+	}
+
+	ret, state := controller.ISesorService.Update(request)
+	c.JSON(ret, state)
+}
