# Routes/v1/Routes/Auth.go
@@ -1,14 +1,0 @@
-package Routes
-
-import (
-	"Api/Config"
-	"github.com/gin-gonic/gin"
-)
-
-func RegisterAuth(r *gin.RouterGroup) {
-	auth := r.Group("/auth")
-
-	authController := Config.ServiceContainer().InjectAuthController()
-	auth.POST("/login", authController.Login)
-	auth.POST("/register", authController.Register)
-}
