# Routes/v1/Routes/Clinical.go
@@ -2,14 +2,12 @@ package Routes
 
 import (
 	"Api/Config"
-	"Api/Middleware"
 	"github.com/gin-gonic/gin"
 )
 
 func RegisterClinical(r *gin.RouterGroup) {
-	clinical := r.Group("/clinical")
-	clinical.Use(Middleware.AuthMiddleware())
+	clinical := r.Group("/sesor")
 
 	controller := Config.ServiceContainer().InjectClinicalController()
-	clinical.POST("/register", controller.Register)
+	clinical.POST("/update", controller.Update)
 }
